welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:11: error: value poseBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value poseBiscuit'?
}poseBiscuit()
 ^